--- a/painter.html
+++ b/painter.html
@@ -43,6 +43,30 @@ function checkPainter(){
     }
 }
 </script>
+<div class="container">
+    <img src="Sanguisorba.jpg" width="100" height="100" onclick="selectImage()" id="image">
+</div>
+<script>
+    var useImage=1
+    function selectImage(){
+        out=document.getElementById("image")
+        switch(useImage){
+            case 1:
+                out.src="Alipne_azalea.jpg"
+                useImage+=1
+                break;
+            case 2:
+                out.src="Darcycarpus.jpg"
+                useImage+=1
+                break;
+            case 3:
+                out.src="Sanguisorba.jpg"
+                useImage=1
+                break;
+    }
+}
+
+</script>
 
 </body>
 </html> 
