--- a/candy.html
+++ b/candy.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <title>candys file</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+          integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+          integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     </head>
 <body>
     <h1>Sai Balaji Gadi chooses candy</h1>
@@ -19,7 +27,7 @@
     <input type ="checkbox" id="chewy" name="candy3"  value=false>
     <label for="form1_age">Chewy</label><br>
 
-    <input type="button" onclick=selectBox() value="Select a box">
+    <input type="button" onclick=selectBox() value="Select a box" class="btn btn-warning">
 </form>
 <form>
     <label for="form1_age">Enter the size</label>
@@ -29,7 +37,7 @@
     <input type ="text" id="price" name="Box_price"><br>
 
 
-    <input type="button" onclick=updateBox() value="Update the box">
+    <input type="button" onclick=updateBox() value="Update the box" class="btn btn-warning">
 </form>
 
 
