--- a/conversions.html
+++ b/conversions.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <title> coversions file</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+          integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+          integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     </head>
  
 <body>
@@ -16,7 +24,7 @@
     <label for="form1_nick">Enter the conversion rate </label>
     <input type ="number" id="conversion_value" name="form1_nick" value=35> <br>
 
-    <input type="button" onclick="convert()" value="Show conversions">
+    <input type="button" onclick="convert()" value="Show conversions" class="btn btn-warning">
 </form>
 
 
@@ -53,7 +61,7 @@ function convert(){
 </form>
 
 
-<p id="result1">This results will be displayed here</p>
+<p id="result1">The results will be displayed here</p>
 
 <script> 
 
