--- a/painter.html
+++ b/painter.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title> Painter file information </title>
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     </head>
  
 <body>
@@ -10,13 +19,13 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="password">The hidden painter name </label>
+    <label for="password">hidden painter name</label>
     <input type ="password" id="password"  value="Monet"> <br>
 
-    <label for="checking">Guess the painter </label>
+    <label for="checking"> the painter </label>
     <input type ="text" id="checking"> <br>
 
-    <input type="button" onclick="checkPainter()" value="Check the guess">
+    <input type="button" onclick="checkPainter()" value="Check the guess" class="btn btn-warning">
 </form>
 
 
@@ -28,19 +37,24 @@ var oops =0;
 function checkPainter(){
     painter = document.getElementById("password").value
     guess = document.getElementById("checking").value
+    out = document.getElementById("result")
     if(painter==guess){
         good=good+1
         alert("You got it right")
+        out.innerHTML = "Right count:" +good
     }else{
         oops=oops+1
         alert("Sorry")
-    }
-    out = document.getElementById("result")
-    if(good==1){
-        out.innerHTML = "Right count:" +good
-    } if(oops==1) {
         out.innerHTML = "Wrong count:" +oops
     }
+    if(oops==10){
+        guesscounters()
+    }
+}
+function guesscounters(){
+        alert("Sorry, ran out of guesses");
+        oops = 0;
+        out.innerHTML="Wrong count :"+oops
 }
 </script>
 <div class="container">
